--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="trending_today">Trending Today</string>
     <string name="runtime">%d Minutes</string>
     <string name="youtube_id">%s</string>
+    <string name="search">Search</string>
 </resources>
