refactor ui home screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,10 @@
     <string name="runtime">%d Minutes</string>
     <string name="youtube_id">%s</string>
     <string name="search">Search</string>
+    <string name="no_results_found">No results found.</string>
+    <string name="what_do_you_want_to_watch">What do you want to watch?</string>
+    <string name="popular">Popular</string>
+    <string name="top_rated">Top rated</string>
+    <string name="upcoming">Upcoming</string>
+    <string name="now_playing">Now playing</string>
 </resources>
