--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,9 @@
     <string name="top_rated">Top rated</string>
     <string name="upcoming">Upcoming</string>
     <string name="now_playing">Now playing</string>
+    <string name="detail">Detail</string>
+    <string name="about_movie">About Movie</string>
+    <string name="reviews">Reviews</string>
+    <string name="cast">Cast</string>
+    <string name="watch_list">Watch list</string>
 </resources>
