--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Movie</string>
+    <string name="app_name">MovieApp</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="home">Home</string>
@@ -19,4 +19,8 @@
     <string name="reviews">Reviews</string>
     <string name="cast">Cast</string>
     <string name="watch_list">Watch list</string>
+    <string name="bookmarked_success">Bookmarked successfully!</string>
+    <string name="removed_bookmark_success">Removed bookmark successfully!</string>
+    <string name="trailer_not_found">The trailer for the movie could not be found.</string>
+    <string name="no_genre">No genre</string>
 </resources>
