--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,19 @@
     <string name="removed_bookmark_success">Removed bookmark successfully</string>
     <string name="trailer_not_found">The trailer for the movie could not be found.</string>
     <string name="no_genre">No genre</string>
+    <string name="movify">MOVIFY</string>
+    <string name="welcome">Welcome</string>
+    <string name="welcome_description">Movify is the next gen movie recomendation system</string>
+    <string name="create_account">Create Account</string>
+    <string name="login">Login</string>
+    <string name="or">OR</string>
+    <string name="login_with_google">Login With google</string>
+    <string name="welcome_back">Welcome Back!!!</string>
+    <string name="username_email">username/email</string>
+    <string name="password">password</string>
+    <string name="remember_me">Remember me</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="don_t_have_an_account">Don’t have an account?</string>
+    <string name="register">Register</string>
+    <string name="movie_card_trasition">movie_card_transition_%1$d</string>
 </resources>
